# project-scout

./: .gitignore  CONFIG_SETUP.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  REAL_DATA_README.md  SKILL.md  config.example.json  pyproject.toml  requirements.txt
agents/: demand-scraper.md  gap-scorer.md  github-analyzer.md  opportunity-ranker.md  pain-extractor.md
examples/: sample-report.md
schemas/: opportunity-handoff-v1.json
scripts/: README.md  analyze_data.py  scrape_data.py  test_config.py
src/project_scout/: __init__.py  cli.py  extractors.py  io.py  models.py  normalization.py  scoring.py
tests/: test_pipeline.py
tests/fixtures/: evidence.json
